Add value addable feature for bulk changes

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -83,6 +83,11 @@
                     updateGroup: false,
                     remove:      false
                 },
+                margin: {
+                    item: {
+                        horizontal: 0
+                    }
+                },
                 onMove: on_move,
                 snap:   snap_to_day
             };
