--- a/views/login.tt
+++ b/views/login.tt
@@ -57,7 +57,7 @@
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <form role="form" method="post" autocomplete="off" enctype="multipart/form-data">
+                    <form method="post" autocomplete="off" enctype="multipart/form-data">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         <h1 class="modal-title" id="myModalLabel">Reset password</h1>
