--- a/views/login.tt
+++ b/views/login.tt
@@ -24,32 +24,32 @@
     [% ELSE %]
         <div class="row" style="margin-top:20px">
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <form role="form" method="post" autocomplete="off">
-                    <fieldset>
-                        <h1>Please Sign In</h1>
-                        <hr>
-                        <div class="form-group">
-                            <input type="email" name="username" id="email" class="form-control input-lg" placeholder="Email Address" value="[% username %]">
+                <form method="post" autocomplete="off">
+                    <h1>Please Sign In</h1>
+                    <hr>
+                    <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" name="username" id="email" class="form-control input-lg" placeholder="name@example.com" value="[% username %]">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" name="password" id="password" class="form-control input-lg">
+                    </div>
+                    <span class="button-checkbox">
+                        <button type="button" class="btn" data-color="info">Remember Username</button>
+                        <input type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="hidden">
+                        <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Reset Password</a>
+                    </span>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <input type="submit" name="signin" class="btn btn-lg btn-success btn-block" value="Sign In">
                         </div>
-                        <div class="form-group">
-                            <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <a href="" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</a>
                         </div>
-                        <span class="button-checkbox">
-                            <button type="button" class="btn" data-color="info">Remember Username</button>
-                            <input type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="hidden">
-                            <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Reset Password</a>
-                        </span>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <input type="submit" name="signin" class="btn btn-lg btn-success btn-block" value="Sign In">
-                            </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <a href="" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</a>
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
+                    </div>
+            </form>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
                         <div class="form-group">
                             <p>Enter your email address to receive a password reset link.</p>
                             <label for="email">Email address</label>
-                            <input type="email" class="form-control" name="emailreset" id="email" placeholder="name@example.com">
+                            <input type="email" class="form-control" name="emailreset" id="emailreset" placeholder="name@example.com">
                         </div>
                     </div>
                     <div class="modal-footer">
