--- a/views/login.tt
+++ b/views/login.tt
@@ -35,11 +35,18 @@
                         <label for="password">Password:</label>
                         <input type="password" name="password" id="password" class="form-control input-lg">
                     </div>
-                    <span class="button-checkbox">
-                        <button type="button" class="btn" data-color="info">Remember Username</button>
-                        <input type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="hidden">
-                        <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Reset Password</a>
-                    </span>
+                    <div>
+                        <span class="remember-me">
+                            <input type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="visually-hidden-opacity">
+                            <label for="remember">
+                                <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+                                Remember Username
+                            </label>
+                        </span>
+                        <span class="reset-password">
+                            <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Reset Password</a>
+                        </span>
+                    </div>
                     <hr>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6">
