--- a/views/login.tt
+++ b/views/login.tt
@@ -60,19 +60,26 @@
             </div>
         </div>
 
+        [% BLOCK modal_close_button %]
+            <button type="button" class="close" data-dismiss="modal">
+                <span class="close-mark" aria-hidden="true">&times;</span>
+                close
+            </button>
+        [% END %]
+
         <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="reset-password-heading" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form method="post" autocomplete="off" enctype="multipart/form-data">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h1 class="modal-title" id="myModalLabel">Reset password</h1>
-                    </div>
+                        <h1 class="modal-title" id="reset-password-heading">Reset password</h1>
+                        [% PROCESS modal_close_button %]
+                   </div>
                     <div class="modal-body">
                         <div class="form-group">
                             <p>Enter your email address to receive a password reset link.</p>
-                            <label for="email">Email address</label>
+                            <label for="email">Email address:</label>
                             <input type="email" class="form-control" name="emailreset" id="emailreset" placeholder="name@example.com">
                         </div>
                     </div>
@@ -84,14 +91,15 @@
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
+
         <!-- Modal -->
-        <div class="modal fade" id="modalregister" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="modalregister" tabindex="-1" role="dialog" aria-labelledby="request-account-heading" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <form role="form" method="post" autocomplete="off">
+                    <form method="post" autocomplete="off">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">Request account</h4>
+                        <h1 class="modal-title" id="request-account-heading">Request account</h1>
+                        [% PROCESS modal_close_button %]
                     </div>
                     <div class="modal-body">
                         [% IF error %]
