--- a/views/login.tt
+++ b/views/login.tt
@@ -53,7 +53,7 @@
                             <input type="submit" name="signin" class="btn btn-lg btn-success btn-block" value="Sign In">
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6">
-                            <a href="" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</a>
+                            <button type="button" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</button>
                         </div>
                     </div>
             </form>
